[tool.poetry]
name = "memokaso"
version = "0.1.0"
description = "FAK YOU"
authors = ["KaWaiiKASO <dldlrwn1022@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
